# urirun-fleet

./: README.md  pyproject.toml
examples/: fleet.yaml
tests/: test_execute.py  test_fleet.py
urirun_fleet/: __init__.py  actual_state.py  capabilities.py  cli.py  desired_state.py  diff.py  events.py  executor.py  node_client.py  provenance.py  reconciler.py  resolver.py  rollout.py  smoke.py  status.py
